Fix CSS syntax error: 'whitespace' / 'white-space'. Reported on dewiki: http://de.wikipedia.org/w/index.php?title=Wikipedia:Fragen_zur_Wikipedia&oldid=63562401#unbekannte_CSS-Eigenschaft_.22whitespace.22
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@55345 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/wikiEditor.toolbar.css
+++ b/extensions/UsabilityInitiative/css/wikiEditor.toolbar.css
@@ -217,7 +217,7 @@ body.rtl .wikiEditor-ui-toolbar .group .tool-select .menu {
 	padding: 0.5em;
 	text-decoration: none;
 	color: black;
-	whitespace: nowrap;
+	white-space: nowrap;
 }
 .wikiEditor-ui-toolbar .group .tool-select .options .option:hover {
 	background-color: #f3f3f3;
